@@ -1,9 +1,14 @@
 # -*- coding: utf-8 -*-
-from trytond.pool import PoolMeta
+import datetime
+
+from sql.conditionals import Coalesce
+
+from trytond.pool import PoolMeta, Pool
 
 import model
 import export
 import fields
+import utils
 
 __metaclass__ = PoolMeta
 
@@ -16,6 +21,9 @@ __all__ = [
     'ExportTestRelation',
     'O2MDeletionMaster',
     'O2MDeletionChild',
+    'TestVersionedObject',
+    'TestVersion',
+    'TestVersion1',
     ]
 
 
@@ -127,3 +135,128 @@ class O2MDeletionChild(model.CoopSQL):
     __name__ = 'cog_utils.o2m_deletion_child_test'
 
     master = fields.Many2One('cog_utils.o2m_deletion_master_test', 'Master')
+
+
+class TestVersionedObject(model.CoopSQL):
+    'Test Versioned Object'
+
+    __name__ = 'cog_utils.test_version'
+
+    versions = fields.One2Many('cog_utils.test_version.version', 'master',
+        'Versions', delete_missing=True, order=[('start', 'ASC')])
+    current_version = fields.Function(
+        fields.Many2One('cog_utils.test_version.version', 'Current Version'),
+        'get_current_version')
+    version_field = fields.Function(
+        fields.Char('Versioned Field'),
+        'get_current_version')
+    versions_1 = fields.One2Many('cog_utils.test_version.version1',
+        'master_1', 'Versions 1', delete_missing=True,
+        order=[('start_1', 'ASC')])
+    current_version_1 = fields.Function(
+        fields.Many2One('cog_utils.test_version.version1',
+            'Current Version 1'),
+        'get_current_version_1')
+    current_version_1_version_field = fields.Function(
+        fields.Char('Versioned Field'),
+        'get_current_version_1')
+
+    test_field = fields.Char('Test Field')
+
+    @classmethod
+    def default_versions(cls):
+        return [Pool().get(
+                'cog_utils.test_version.version').get_default_version()]
+
+    @classmethod
+    def default_versions_1(cls):
+        return [Pool().get(
+                'cog_utils.test_version.version1').get_default_version()]
+
+    @classmethod
+    def get_current_version(cls, instances, names):
+        return utils.version_getter(instances, names,
+            'cog_utils.test_version.version', 'master', utils.today(),
+            field_map={'id': 'current_version'})
+
+    @classmethod
+    def get_current_version_1(cls, instances, names):
+        return utils.version_getter(instances, names,
+            'cog_utils.test_version.version1', 'master_1', utils.today(),
+            date_field='start_1', field_map={
+                'id': 'current_version_1', 'version_field':
+                'current_version_1_version_field'})
+
+    @fields.depends('versions_1', 'current_version_1_version_field')
+    def on_change_current_version_1_version_field(self):
+        version = self.get_version_1_at_date(utils.today())
+        version.version_field = self.current_version_1_version_field
+        self.versions_1 = self.versions_1
+
+    @fields.depends('versions', 'version_field')
+    def on_change_version_field(self):
+        version = self.get_version_at_date(utils.today())
+        version.version_field = self.version_field
+        self.versions = self.versions
+
+    def get_version_at_date(self, at_date):
+        assert at_date
+        for version in sorted(self.versions,
+                key=lambda x: x.start or datetime.date.min, reverse=True):
+            if (version.start or datetime.date.min) <= at_date:
+                return version
+        raise KeyError
+
+    def get_version_1_at_date(self, at_date):
+        assert at_date
+        for version in sorted(self.versions_1,
+                key=lambda x: x.start_1 or datetime.date.min, reverse=True):
+            if (version.start_1 or datetime.date.min) <= at_date:
+                return version
+        raise KeyError
+
+
+class TestVersion(model.CoopSQL):
+    'Test Version'
+
+    __name__ = 'cog_utils.test_version.version'
+
+    master = fields.Many2One('cog_utils.test_version', 'Master', required=True,
+        ondelete='CASCADE')
+    start = fields.Date('Start')
+    version_field = fields.Char('Version Field')
+
+    @classmethod
+    def order_start(cls, tables):
+        table, _ = tables[None]
+        return [Coalesce(table.start, datetime.date.min)]
+
+    @classmethod
+    def get_default_version(cls):
+        return {
+            'start': None,
+            'version_field': 'Default Value',
+            }
+
+
+class TestVersion1(model.CoopSQL):
+    'Test Version'
+
+    __name__ = 'cog_utils.test_version.version1'
+
+    master_1 = fields.Many2One('cog_utils.test_version', 'Master 1',
+        required=True, ondelete='CASCADE')
+    start_1 = fields.Date('Start 1')
+    version_field = fields.Char('Version Field')
+
+    @classmethod
+    def order_start_1(cls, tables):
+        table, _ = tables[None]
+        return [Coalesce(table.start_1, datetime.date.min)]
+
+    @classmethod
+    def get_default_version(cls):
+        return {
+            'start_1': None,
+            'version_field': 'Default Value 1',
+            }
