@@ -1,3 +1,4 @@
+* Add generic version getter
 * Add ws_create_objects web service
 * Add tags to sequence
 * Add TranslationOverride wizard to edit custom translations
